--- a/repos/11.1/11.1.Exam1.csproj
+++ b/repos/11.1/11.1.Exam1.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_11._1</RootNamespace>
+    <RootNamespace>_11._1.Exam1</RootNamespace>
   </PropertyGroup>
 
 </Project>
